# epidemic_simulator

./: a_compile_n_run.sh  compile_n_run.sh  configure  configure.ac  fetch_data.sh  g_compile_n_run.sh  log.txt  makefile  makefile.analytics  makefile.graphics  notes.txt  o.txt  sim
autom4te.cache/: output.0  requests  traces.0
data/: sim_data.csv  sim_data_2d.csv
data_analysis/: data_analysis.nb
include/: SIR_model.h  graphics_main.h  infection_model.h  main.h  network_constructor.h  node.h  simulation.h
sim_configs/: sim1.sh  sim10.sh  sim2.sh  sim2D.sh  sim3.sh  sim4.sh  sim5.sh  sim6.sh  sim7.sh  sim8.sh  sim9.sh
src/: SIR_model.cpp  graphics_main.cpp  infection_model.cpp  main.cpp  network_constructor.cpp  node.cpp  simulation.cpp  todo
